--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+itertools = "0.9"
 plist = "1.0"
 ruma-serde = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
+structopt = "0.3"
