--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.9"
+mime_guess = "2.0"
 plist = "1.0"
 ruma-serde = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 structopt = "0.3"
+url = "2.1.1"
