Add more Cargo metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "webarchive"
+description = "Utilities for working with Apple's Web Archive file format"
 version = "0.1.0"
+license = "MIT OR Apache-2.0"
 authors = ["Jessica Stokes <hello@jessicastokes.net>"]
+homepage = "https://github.com/ticky/webarchive"
+repository = "https://github.com/ticky/webarchive.git"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
