Use `anyhow` for error handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
 mime_guess = "2.0"
 plist = "1.0"
 ruma-serde = "0.6"
