--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "webarchive"
 description = "Utilities for working with Apple's Web Archive file format"
-version = "0.1.0"
+version = "0.2.0"
 license = "MIT OR Apache-2.0"
 authors = ["Jessica Stokes <hello@jessicastokes.net>"]
 homepage = "https://github.com/ticky/webarchive"
@@ -19,3 +19,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 structopt = "0.3"
 url = "2.1.1"
+
+[dev-dependencies]
+assert_cmd = "2.0"
+assert_fs = "1.0"
