--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ anyhow = "1.0"
 mime_guess = "2.0"
 plist = "1.0"
 ruma-serde = "0.6"
-serde = { version = "1.0", features = ["derive"] }
+serde = "1.0"
 serde_bytes = "0.11"
 structopt = "0.3"
 url = "2.1.1"
