--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+clap = { version = "3.0", features = ["derive"] }
 mime_guess = "2.0"
 plist = "1.0"
 ruma-serde = "0.6"
 serde = "1.0"
 serde_bytes = "0.11"
-structopt = "0.3"
-url = "2.1.1"
+url = "2.1"
 
 [dev-dependencies]
 assert_cmd = "2.0"
